# Where-Did-My-Time-Go-

./: .gitignore  README.md  pyproject.toml
integrations/: README.md  SUGGESTED_MEDIA.md
scripts/: dev_run_example.sh  powershell_hook.ps1  shell_hook.sh
src/timetrace/: categorize.py  cli.py  config.py  db.py  default_config.json  models.py  report.py  utils.py
tests/: test_utils.py
